for loop started

--- a/r-p-s.css
+++ b/r-p-s.css
@@ -2,3 +2,8 @@ h1 {
     color:green;
     font: arial;
 }
+
+
+
+I ADDED GAME FUNCTION IN AT THE END, AND THE FOR LOOP.
+THIS NEEDS TWEAKING TO MAKE THE RETURN STATEMENT SHOW AGIAN
