--- a/r-p-s.css
+++ b/r-p-s.css
@@ -1,4 +1,59 @@
-h1 {
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+body {
+    background: yellowgreen;
+}
+header {
+    background: white;
     color:green;
     font: arial;
+    padding: 20px;
+}
+header > h1 {
+    color: #25272e;
+    text-align: center;
+    font: arial;
+}
+.scoreboard {
+    margin: 20px auto;
+    border: 3px solid white;
+    border-radius: 4px;
+    width: 200px;
+    padding: 15px, 20px;
+    color: white;
+    font-size: 46px;
+    text-align: center;    
+    position: relative;
+}
+.badge {
+    background: #E2584D;
+    color: white;
+    font-size: 14px;
+    padding: 2px 10px;
+    font-family: arial;
+}
+#user-label{
+    position: absolute;
+    top: 30px;
+    left: -25px;
+}
+#computer-label{
+    position: absolute;
+    top: 30px;
+    right: -25px;
+}
+.result {
+    font-size: 40px;
+    color: white;
+}
+.result > p {
+    text-align: center;    
+    font: arial;
+    font-weight: bold;
+}
+.choice {
+    
 }
