--- a/r-p-s.css
+++ b/r-p-s.css
@@ -54,6 +54,24 @@ header > h1 {
     font: arial;
     font-weight: bold;
 }
+.choices {
+    margin: 50px 0;
+    text-align: center;
+}
 .choice {
-    
+    border: 4px solid white;
+    border-radius: 50%;
+    padding: 10px;
+    margin: 0 15px;
+    display: inline-block;
+    transition: all 0.3s ease;
+}
+.choice:hover {
+    cursor: pointer;
+    background: darkgreen;
+}
+#action-message {
+    text-align: center;
+    color: white;
+    font: arial;
 }
