transform scale on hover

--- a/r-p-s.css
+++ b/r-p-s.css
@@ -69,6 +69,7 @@ header > h1 {
     cursor: pointer;
     background: lightslategray;
     border-color: rgb(238, 128, 120);
+    transform: scale(1.5);
 }
 #action-message {
     text-align: center;
