--- a/r-p-s.css
+++ b/r-p-s.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body {
-    background:slategray;
+    background:lightslategray;
 }
 header {
     background:rgb(238, 128, 120);;
@@ -54,22 +54,26 @@ header > h1 {
     font-weight: bold;
 }
 .choices {
-    margin: 50px 0;
+    margin: 50px; 
     text-align: center;
 }
 .choice {
+    height: 150px;
+    width: 150px;
     border: 4px solid white;
     border-radius: 50%;
     padding: 10px;
     margin: 0 15px;
     display: inline-block;
     transition: all 0.3s ease;
+    animation: moveInTop 2s ease-out;
 }
 .choice:hover {
     cursor: pointer;
     background: lightslategray;
-    border-color: rgb(238, 128, 120);
-    transform: scale(1.5);
+    border-color:  RGB(238, 120, 120);
+    transition: all 0.6s ease; 
+    transform: scale(1.2);
 }
 #action-message {
     text-align: center;
@@ -78,6 +82,26 @@ header > h1 {
     font-weight: bold;
     font-size: 20px;
     margin-top: 20px;
+}
+
+.resetButton {
+    background: RGB(238, 120, 120);
+    height: 40px;
+    width: 100px;
+    font: arial;
+    font-weight: bold;
+    color: lightslategray;
+    float: center;
+}
+
+.resetButton:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+/*to center the button, wrapped it in a div called wrapper */
+.wrapper {
+    text-align: center;
+    padding: 50px;
 }
 
 
