added popup in teal

--- a/r-p-s.css
+++ b/r-p-s.css
@@ -119,8 +119,8 @@ header > h1 {
   /* The actual popup */
 .popup .popuptext {
     visibility: hidden;
-    width: 160px;
-    background-color: #555;
+    width: 290px;
+    background-color: rgba(57, 196, 196, 0.678);
     color: #fff;
     text-align: center;
     border-radius: 6px;
@@ -128,12 +128,12 @@ header > h1 {
     position: absolute;
     z-index: 1;
     bottom: 125%;
-    left: 50%;
+    left: 100%;
     margin-left: -80px;
 }
   
   /* Popup arrow */
-  .popup .popuptext::after {
+  /* .popup .popuptext::after {
     content: "";
     position: absolute;
     top: 100%;
@@ -143,7 +143,7 @@ header > h1 {
     border-style: solid;
     border-color: #555 transparent transparent transparent;
 }
- 
+  */
   /* Toggle this class - hide and show the popup */
 .popup .show {
     visibility: visible;
@@ -151,7 +151,7 @@ header > h1 {
     animation: fadeIn 1s;
 }
   
-  /* Add animation (fade in the popup) */
+  Add animation (fade in the popup)
   @-webkit-keyframes fadeIn {
     from {opacity: 0;} 
     to {opacity: 1;}
